[package]
name = "hasp-metadata"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
camino = { version = "1.0.5", features = ["serde1"] }
chrono = { version = "0.4.19", features = ["serde"] }
either = "1.6.1"
rusqlite = { version = "0.26.1", features = ["serde_json"], optional = true }
semver = "1.0.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
hasp-workspace-hack = { path = "../hasp-workspace-hack"}

[dev-dependencies]
proptest = "1.0.0"
