[package]
name = "hasp"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
camino = "1.0.5"
chrono = "0.4.19"
color-eyre = { version = "0.5.11", default-features = false }
colored = "2.0.0"
duct = "0.13.5"
env_logger = "0.9.0"
fs2 = "0.4.3"
hasp-metadata = { path = "../hasp-metadata", features = ["rusqlite"] }
home = "0.5.3"
include_dir = "0.6.2"
jod-thread = "0.1.2"
log = "0.4.14"
once_cell = "1.8.0"
semver = { version = "1.0.4", features = ["serde"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
rusqlite = { version = "0.26.1", features = ["bundled", "chrono"] }
structopt = "0.3.25"
tempfile = "3.2.0"
twox-hash = "1.6.1"

[dev-dependencies]
proptest = "1.0.0"
